--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.calebfroese</groupId>
-    <artifactId>DockerSpigot</artifactId>
+    <artifactId>Credits</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <repositories>
@@ -11,9 +11,10 @@
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
+
         <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
+            <id>dmulloy2-repo</id>
+            <url>https://repo.dmulloy2.net/repository/public/</url>
         </repository>
     </repositories>
 
@@ -22,36 +23,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.6.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
@@ -66,22 +42,10 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- WarpSystem https://github.com/CodingAir/WarpSystem-API -->
         <dependency>
-            <groupId>com.github.CodingAir</groupId>
-            <artifactId>WarpSystem-API</artifactId>
-            <version>5.0.6</version>
-            <scope>provided</scope>
-            <!-- <scope>system</scope>
-            <version>5.0.5</version>
-            <systemPath>${project.basedir}/WarpSystem_v5.0.5_Hotfix-5.jar</systemPath> -->
-        </dependency>
-        <!-- Important: This API is necessary for compiling your plugin -->
-        <dependency>
-            <groupId>com.github.CodingAir</groupId>
-            <artifactId>CodingAPI</artifactId>
-            <version>1.35</version>
-            <scope>provided</scope>
+            <groupId>com.comphenix.protocol</groupId>
+            <artifactId>ProtocolLib</artifactId>
+            <version>4.7.0</version>
         </dependency>
     </dependencies>
 </project>
