--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: Mendont
-main: com.calebfroese.mendont.MendontPlugin
+name: AnvilTweaks
+main: com.calebfroese.anviltweaks.AnvilTweaksPlugin
 version: 1.0
 author: Caleb Froese
-api-version: 1.14
+api-version: 1.20
